hero update + section 3 update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-background"></div>
+        <div class="hero-background">
+            <div class="hero-image-bg"></div>
+        </div>
         <div class="container">
             <div class="hero-wrapper">
                 <div class="hero-content">
@@ -49,9 +51,6 @@
                         <a href="#services" class="btn btn-primary" data-i18n="hero.btnExplore">Explore Services</a>
                         <a href="#contact" class="btn btn-secondary" data-i18n="hero.btnQuote">Get a Quote</a>
                     </div>
-                </div>
-                <div class="hero-image">
-                    <img src="images/collab.jpg" alt="Team collaboration" />
                 </div>
             </div>
         </div>
