--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Social Pay Office - Professional payroll and HR management services for Belgian businesses">
     <title>Social Pay Office - Professional Payroll Services</title>
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,8 +14,7 @@
         <div class="container">
             <div class="nav-content">
                 <a href="index.html" class="logo">
-                    <span class="logo-text">Social Pay</span>
-                    <span class="logo-sub">Office</span>
+                    <img src="images/logo.svg" alt="Social Pay Office" class="logo-image">
                 </a>
                 <ul class="nav-menu">
                     <li><a href="#services" data-i18n="nav.services">Services</a></li>
@@ -279,8 +279,7 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <div class="footer-logo">
-                        <span class="logo-text">Social Pay</span>
-                        <span class="logo-sub">Office</span>
+                        <img src="images/logo.svg" alt="Social Pay Office" class="footer-logo-image">
                     </div>
                     <p class="footer-description" data-i18n="footer.description">Professional payroll services for Belgian businesses. Reliable, compliant, and personal.</p>
                 </div>
