Amélioration du template email + sécurisation credentials avec .env

--- a/about.html
+++ b/about.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Social Pay Office - Expert payroll and HR services for Belgian businesses">
     <title>About Us - Social Pay Office</title>
+
+    <!-- Open Graph Meta Tags (Facebook, WhatsApp, LinkedIn, Telegram, iMessage) -->
+    <meta property="og:title" content="About Us - Social Pay Office">
+    <meta property="og:description" content="About Social Pay Office - Expert payroll and HR services for Belgian businesses">
+    <meta property="og:image" content="https://spoffice.be/images/thumbnail_spoffice-logo.jpg">
+    <meta property="og:image:secure_url" content="https://spoffice.be/images/thumbnail_spoffice-logo.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Social Pay Office Logo">
+    <meta property="og:url" content="https://spoffice.be/about">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Social Pay Office">
+    <meta property="og:locale" content="fr_BE">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Us - Social Pay Office">
+    <meta name="twitter:description" content="About Social Pay Office - Expert payroll and HR services for Belgian businesses">
+    <meta name="twitter:image" content="https://spoffice.be/images/thumbnail_spoffice-logo.jpg">
+    <meta name="twitter:image:alt" content="Social Pay Office Logo">
+
+    <!-- Additional Meta Tags for Messaging Apps -->
+    <meta itemprop="name" content="About Us - Social Pay Office">
+    <meta itemprop="description" content="About Social Pay Office - Expert payroll and HR services for Belgian businesses">
+    <meta itemprop="image" content="https://spoffice.be/images/thumbnail_spoffice-logo.jpg">
+
     <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -182,6 +209,7 @@
                 </nav>
                 <div class="footer-copyright">
                     <p>&copy; 2025 Social Pay Office. <span data-i18n="footer.rights">All rights reserved.</span></p>
+                    <p style="text-align: right; margin-top: 8px; font-size: 0.85em; opacity: 0.75;">made with 🩶 by <a href="https://ksbconsulting.be" target="_blank" rel="noopener" class="ksb-link">KSB Consulting</a></p>
                 </div>
             </div>
         </div>
@@ -189,5 +217,6 @@
 
     <script src="js/i18n.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/ksb-sparkle.js"></script>
 </body>
 </html>
